Repaired footer spacing

--- a/assets/styles/sass/_footer.scss
+++ b/assets/styles/sass/_footer.scss
@@ -35,5 +35,8 @@ footer {
     font-weight: 600;
     line-height: rem(22px);
     font-size: rem(18px);
+    p {
+      margin: .5rem 0;
+    }
   }
 }
